--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <!-- button -->
             <button type="submit" class="btn">Login</button>
             <div class="register-link">
-                <p>Don't have an account? <a href="#">Register</a></p>
+                <p>Don't have an account? <a href="../index.html">Sign Up</a></p>
             </div>
         </form>
      </div>
